# Copyright © 2018 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "kbehdz"
version = "0.2.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]

[dependencies]

[lib]
name = "kbehdz"
path = "kbehdz.rs"
